--- a/index.html
+++ b/index.html
@@ -4,16 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body>
-    <header>
+<header class="header">
+    <nav>
+        <h3 class="nav-title">Ma<span>r</span>y</h3>
+        <ul>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><button class="btn-primary">Hire Me</button></li>
+        </ul>
+    </nav>
+    <div class="banner">
+        <div>
+            <h3 class="banner-greeting">Hi, I  am</h3>
+            <h1 class="banner-title">Mary Hardy</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="download-cv"> Download CV</button>
+            <button class="Contact">Contact</button>
+        </div>
+        <img src="images/hardy.png" alt="">
+    </div>
+</header>
+<main>
 
-    </header>
-    <main>
-        <h2>Shohag</h2>
-    </main>
-    <footer>
+</main>
+<footer>
 
-    </footer>
+</footer>
 </body>
 </html>
