--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </ul>
     </nav>
     <div class="banner">
-        <div>
+        <div class="banner-content">
             <h3 class="banner-greeting">Hi, I  am</h3>
             <h1 class="banner-title">Mary Hardy</h1>
             <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
             <button class="download-cv"> Download CV</button>
             <button class="Contact">Contact</button>
         </div>
-        <img src="images/hardy.png" alt="">
+        <img class="banner-img1" src="images/hardy.png" alt="">
     </div>
 </header>
 <main>
